; ModuleID = '/home/carl/AnghaBench/linux/tools/power/x86/turbostat/extr_turbostat.c_allocate_output_buffer.c'
source_filename = "/home/carl/AnghaBench/linux/tools/power/x86/turbostat/extr_turbostat.c_allocate_output_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@topo = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@output_buffer = common dso_local global i32* null, align 8
@outp = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [21 x i8] c"calloc output buffer\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @allocate_output_buffer() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @topo, i32 0, i32 0), align 4
  %2 = add nsw i32 1, %1
  %3 = mul nsw i32 %2, 2048
  %4 = call i32* @calloc(i32 1, i32 %3)
  store i32* %4, i32** @output_buffer, align 8
  %5 = load i32*, i32** @output_buffer, align 8
  store i32* %5, i32** @outp, align 8
  %6 = load i32*, i32** @outp, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = call i32 @err(i32 -1, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %0
  ret void
}

declare dso_local i32* @calloc(i32, i32) #1

declare dso_local i32 @err(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
